# pythia

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum
.ai/: stack-profile.md
cmd/pythia/: main.go  main_test.go
crates/capability-host/: Cargo.toml
crates/capability-host/src/: execute.rs  lib.rs  limits.rs  linker.rs  wasi.rs
crates/capability-host/src/host_fns/: fs.rs  mod.rs  secret.rs
crates/capability-host/tests/: execute.rs  fs_read.rs  instantiate.rs  read_memory.rs  resource_limits.rs  secret_get.rs  wasi_ambient_authority.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  compose.rs  lib.rs  main.rs  render.rs
crates/cli/tests/: demo_durability.rs  demo_safety.rs  workspace_scaffold.rs
crates/eventlog/: Cargo.toml
crates/eventlog/src/: lib.rs  schema.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: context.rs  dispatch.rs  event.rs  lib.rs  turn.rs
crates/kernel/tests/: turn_loop.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: capability.rs  host_fn.rs  lib.rs  manifest.rs  policy.rs  resolve.rs
crates/provider/: Cargo.toml
crates/provider-ollama/: Cargo.toml
crates/provider-ollama/src/: lib.rs  wire.rs
crates/provider-ollama/tests/: contract_mocked_http.rs  live_ollama.rs
crates/provider/src/: contract_tests.rs  lib.rs  mock.rs
crates/provider/tests/: contract_mock.rs
docs/adr/: 0001-four-unit-orthogonal-architecture.md  0001-provider-port-streaming-shape.md  0002-event-sourced-kernel-replay.md  0002-tool-registry-seam-future-grpc-plugins.md  0003-sqlite-modernc-repository-boundary.md  0003-wasmtime-capability-host.md  0004-module-package-layout-dependency-rule.md  0004-sqlite-wal-event-log.md  0005-bash-tool-os-sandbox.md  0005-provider-trait-byo-key.md  0006-wasm32-wasip1-target.md
docs/architecture/: first-slice.md
docs/data/: first-slice-schema.md
docs/reference/: hermes-data-architecture.md  hermes-security-architecture.md  hermes-systems-architecture.md
docs/security/: bash-sandbox-residual-risk.md  bash-sandbox-threat-model.md
docs/superpowers/architecture/: pythia-architecture.md
docs/superpowers/data/: pythia-data-model.md
docs/superpowers/handoffs/: 2026-07-10-design-phase-complete.md  2026-07-11-vertical-slice-complete.md
docs/superpowers/plans/: bash-sandbox-tracking.md  bash-sandbox.md  first-slice-tracking.md  first-slice.md  pythia-hardening.md  pythia-vertical-slice-tracking.md  pythia-vertical-slice.md
docs/superpowers/security/: pythia-threat-model.md
docs/superpowers/specs/: 2026-07-10-pythia-engine-design.md  bash-sandbox.md  first-slice.md
internal/adapter/provider/ollama/: live_test.go  ollama.go  ollama_test.go  wire.go
internal/adapter/store/sqlite/: migrate.go  migrate_test.go  repository.go  repository_test.go  sqlite.go
internal/adapter/store/sqlite/migrations/: 0001_init.sql
internal/adapter/tool/bash/: bash.go  bash_sandbox_linux_test.go  bash_test.go  sandbox_integration_linux_test.go
internal/adapter/tool/bash/sandbox/: bypass_linux_test.go  child_linux.go  doc.go  env.go  env_test.go  landlock_linux.go  landlock_linux_test.go  policy.go  policy_test.go  sandbox_linux.go  sandbox_other.go  sandbox_other_test.go  seccomp_linux.go  seccomp_linux_test.go  spine_linux_test.go  wire.go  wire_test.go
internal/adapter/tool/edit/: edit.go  edit_test.go
internal/adapter/tool/read/: read.go  read_test.go
internal/adapter/tool/registry/: registry.go  registry_test.go
internal/adapter/tool/toolkit/: path.go  path_test.go  result.go  result_test.go  validate.go  validate_test.go
internal/adapter/tool/write/: write.go  write_test.go
internal/adapter/tui/: e2e_test.go  model.go  model_test.go  program.go  sanitize.go  sanitize_test.go
internal/arch/: dependency_rule_test.go  doc.go
internal/config/: config.go  config_test.go
internal/core/: agent.go  agent_test.go  domain.go  domain_test.go  errors.go  event.go  event_test.go  id.go  id_test.go  ports_test.go  provider.go  session.go  tool.go
skills/: Cargo.toml
skills/read-file/: Cargo.toml
skills/read-file/src/: main.rs
skills/send-email/: Cargo.toml
skills/send-email/src/: lib.rs  main.rs
skills/send-email/tests/: build_wasm.rs
skills/skill-sdk/: Cargo.toml
skills/skill-sdk/src/: imports.rs  lib.rs  manifest.rs  result.rs
