[package]
name = "pythia-cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "pythia"
path = "src/main.rs"

[dependencies]
pythia-kernel = { path = "../kernel" }
pythia-provider-ollama = { path = "../provider-ollama" }
pythia-capability-host = { path = "../capability-host" }
pythia-eventlog = { path = "../eventlog" }
