[package]
name = "pythia-kernel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
pythia-eventlog = { path = "../eventlog" }
pythia-provider = { path = "../provider" }
pythia-capability-host = { path = "../capability-host" }
pythia-manifest = { path = "../manifest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
pythia-provider = { path = "../provider", features = ["test-util"] }
tempfile = "3"
