[package]
name = "pythia-provider-ollama"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
pythia-provider = { path = "../provider" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
