[package]
name = "pythia-provider-ollama"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pythia-provider = { path = "../provider" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
pythia-provider = { path = "../provider", features = ["test-util"] }
