[package]
name = "send-email"
version = "0.1.0"
edition = "2021"
description = "Safety-demo skill: requests net:smtp and secret:SMTP_PASSWORD so its compiled wasm32-wasip1 module has real import-table entries for the capability host's import-absence assertion (Task 18 / SR-2)."
publish = false

# `cdylib` is the artifact loaded by the capability host once built for
# wasm32-wasip1; `rlib` keeps `parse_args` unit-testable on the native
# target without a wasmtime round-trip.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1"

[dev-dependencies]
wasmparser = "0.221"
